--- a/public/login.html
+++ b/public/login.html
@@ -24,6 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="/supabase-config.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/theme.css">
     <style>
       .gradient-bg { background: linear-gradient(135deg, #a7f3d0 0%, #bae6fd 100%); }
       .brand-title { font-family: 'Plus Jakarta Sans', sans-serif; font-weight: 700; font-size: 1.8rem; letter-spacing: -0.02em; }
@@ -55,12 +56,12 @@
                class="w-full rounded-lg border border-slate-300/80 bg-white/80 backdrop-blur px-4 py-3 shadow-sm focus:outline-none focus:ring-2 focus:ring-emerald-300 focus:border-emerald-300" />
 
         <button id="sendCodeBtn"
-                class="w-full mt-4 inline-flex items-center justify-center rounded-lg bg-gradient-to-r from-emerald-300 to-sky-300 px-4 py-3 text-black font-semibold shadow-glow hover:from-emerald-200 hover:to-sky-200 focus:outline-none focus:ring-2 focus:ring-emerald-300">
+                class="btn btn-primary glow w-full mt-4 justify-center text-base">
           Send OTP
         </button>
 
         <button id="resendBtn" disabled
-                class="w-full mt-2 inline-flex items-center justify-center rounded-lg bg-white/70 px-4 py-2 text-slate-900 font-medium hover:bg-white focus:outline-none focus:ring-2 focus:ring-slate-300 border border-white/60 hidden">
+                class="btn btn-muted w-full mt-2 justify-center hidden">
           Resend in 30s
         </button>
 
@@ -69,12 +70,12 @@
           <input id="otp" inputmode="numeric" autocomplete="one-time-code" placeholder="6-digit code"
                  class="w-full rounded-lg border border-slate-300/80 bg-white/80 backdrop-blur px-4 py-3 shadow-sm focus:outline-none focus:ring-2 focus:ring-emerald-300 focus:border-emerald-300" />
           <button id="verifyBtn"
-                  class="w-full mt-4 inline-flex items-center justify-center rounded-lg bg-gradient-to-r from-emerald-300 to-sky-300 px-4 py-3 text-black font-semibold shadow-glow hover:from-emerald-200 hover:to-sky-200 focus:outline-none focus:ring-2 focus:ring-emerald-300">
+                  class="btn btn-primary glow w-full mt-4 justify-center text-base">
             Verify & Sign In
           </button>
         </div>
 
-        <button id="signOutBtn" class="w-full mt-4 hidden inline-flex items-center justify-center rounded-lg bg-white/70 px-4 py-2 text-slate-900 font-medium hover:bg-white focus:outline-none focus:ring-2 focus:ring-slate-300 border border-white/60">Sign Out</button>
+        <button id="signOutBtn" class="btn btn-muted w-full mt-4 hidden justify-center">Sign Out</button>
 
         <div id="msg" aria-live="polite" class="text-sm text-slate-700 mt-4"></div>
         <div id="error" aria-live="assertive" class="text-sm text-rose-700 mt-2"></div>
