--- a/public/student.html
+++ b/public/student.html
@@ -7,6 +7,8 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+    <script src="/js/navbar.js"></script>
+    <link rel="stylesheet" href="/styles/theme.css">
     <script>
         tailwind.config = {
             theme: {
@@ -23,7 +25,18 @@
   <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
         body { font-family: 'Inter', sans-serif; }
-        .gradient-bg { background: linear-gradient(135deg, #a7f3d0 0%, #bae6fd 100%); }
+        .student-shell { gap: 2.5rem; }
+        .student-join { gap: 1.5rem; }
+        .student-live { gap: 1.5rem; }
+        .student-content { gap: 1.5rem; }
+        .student-panels .surface { height: 100%; }
+        .student-panels {
+            display: grid;
+            gap: 1.5rem;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            align-items: stretch;
+            grid-auto-rows: minmax(0, 1fr);
+        }
         @keyframes slideIn {
             from { opacity: 0; transform: translateY(10px); }
             to { opacity: 1; transform: translateY(0); }
@@ -32,38 +45,36 @@
         .connection-indicator { transition: all 0.3s ease; }
   </style>
 </head>
-<body class="bg-gray-50 min-h-screen text-black">
+<body class="student-page">
+    <div id="app-navbar"></div>
+    <script>window.initNavbar && window.initNavbar({ showModes: false, showSignOut: false });</script>
+    <main class="student-shell stack">
     <!-- Join Form -->
-    <div id="joinForm" class="min-h-screen flex items-center justify-center bg-gradient-to-br from-sky-50 to-emerald-50 px-4">
-        <div class="max-w-md w-full">
+    <div id="joinForm" class="page-shell flex items-center justify-center px-4 py-12">
+        <div class="surface surface--padded surface--static w-full max-w-md">
             <div class="text-center mb-8">
-                <div class="w-20 h-20 mx-auto bg-gradient-to-br from-sky-200 to-emerald-200 rounded-full flex items-center justify-center mb-4 backdrop-blur-sm border border-slate-200">
+                <div class="inline-flex items-center justify-center w-20 h-20 mx-auto rounded-full border border-slate-200 bg-white/80 shadow-sm mb-4">
                     <i data-lucide="graduation-cap" class="w-10 h-10 text-slate-700"></i>
                 </div>
-                <h1 class="text-3xl font-bold text-gray-900 mb-2">AI(ttention)</h1>
-                <p class="text-gray-600">Join your group session to start learning</p>
+                <h1 class="text-3xl font-semibold text-slate-900 mb-2">AI(ttention)</h1>
+                <p class="text-slate-600">Join your group session to start learning</p>
             </div>
-            
-            <div class="bg-white rounded-2xl shadow-xl p-8">
-                <form id="joinSessionForm" class="space-y-6">
+            <div class="stack" style="gap:1.5rem;">
+                <form id="joinSessionForm" class="stack" style="gap:1.25rem;">
                     <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-2">Session Code</label>
-                        <input type="text" id="sessionCode" placeholder="Enter 6-digit code" maxlength="6" 
-                               class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent text-center text-lg font-mono tracking-widest">
+                        <label class="block text-sm font-medium text-slate-700 mb-2" for="sessionCode">Session Code</label>
+                        <input type="text" id="sessionCode" placeholder="Enter 6-digit code" maxlength="6" class="input-field text-center text-lg font-mono tracking-[0.6em]" />
                     </div>
                     <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-2">Group Number</label>
-                        <input type="number" id="groupNumber" placeholder="Your group number" min="1" max="99"
-                               class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent text-center text-lg">
+                        <label class="block text-sm font-medium text-slate-700 mb-2" for="groupNumber">Group Number</label>
+                        <input type="number" id="groupNumber" placeholder="Your group number" min="1" max="99" class="input-field text-center text-lg" />
                     </div>
-                    <button type="submit" class="w-full bg-blue-200 text-black py-3 px-6 rounded-lg font-semibold hover:bg-blue-300 transition-all duration-200 transform hover:scale-105 shadow border border-blue-300">
-                        Join Session
-                    </button>
+                    <button type="submit" class="btn btn-primary glow w-full justify-center text-base">Join Session</button>
                 </form>
-                <div id="error" class="hidden mt-4 p-4 bg-red-50 border border-red-200 rounded-lg">
+                <div id="error" class="hidden p-4 bg-red-50 border border-red-200 rounded-lg">
                     <div class="flex">
                         <svg class="w-5 h-5 text-red-400 mt-0.5 mr-3" fill="currentColor" viewBox="0 0 20 20">
-                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"/>
+                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"/>
                         </svg>
                         <span id="errorText" class="text-red-800 text-sm"></span>
                     </div>
@@ -73,41 +84,37 @@
     </div>
 
     <!-- Main Content -->
-    <div id="content" class="hidden min-h-screen flex flex-col">
+    <!-- Main Content -->
+    <div id="content" class="hidden page-shell page-shell--fluid student-content stack">
         <!-- Header -->
-        <header class="gradient-bg text-black shadow-xl">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
-                <div class="flex items-center justify-between">
-                    <div class="flex items-center space-x-4">
-                        <div class="w-10 h-10 bg-white rounded-lg flex items-center justify-center backdrop-blur-sm border border-slate-200">
-                            <i data-lucide="graduation-cap" class="w-6 h-6 text-slate-700"></i>
-                        </div>
-                        <div>
-                            <h1 class="text-lg font-semibold flex items-center">
-                                AI(ttention)
-                                <div id="connectionStatus" class="ml-3 flex items-center space-x-2">
-                                    <div id="connectionDot" class="w-2 h-2 bg-green-400 rounded-full animate-ping-slow"></div>
-                                    <span id="connectionText" class="text-xs font-medium text-black">Connected</span>
-                                </div>
-                            </h1>
-                            <p class="text-black/80 text-sm">Session: <span id="activeSession" class="font-mono">-</span> | Group: <span id="activeGroup">-</span> | Elapsed: <span id="timeElapsed">0:00</span></p>
-                        </div>
-                    </div>
-                    <div class="flex items-center space-x-4">
-                        <div id="status" class="flex items-center space-x-2 bg-blue-100 text-blue-800 px-4 py-2 rounded-full">
-                            <div class="w-2 h-2 bg-blue-400 rounded-full"></div>
-                            <span id="statusText" class="text-sm font-medium">Waiting...</span>
-                        </div>
-                    </div>
+        <div class="surface surface--padded surface--static flex flex-wrap items-center justify-between gap-4">
+            <div class="flex items-center gap-3">
+                <div class="w-10 h-10 bg-white rounded-xl flex items-center justify-center border border-slate-200 shadow-sm">
+                    <i data-lucide="graduation-cap" class="w-5 h-5 text-slate-700"></i>
+                </div>
+                <div class="min-w-0">
+                    <h2 class="text-lg font-semibold text-slate-900 flex items-center gap-3">
+                        AI(ttention)
+                        <span id="connectionStatus" class="flex items-center gap-2">
+                            <span id="connectionDot" class="w-2 h-2 rounded-full bg-green-400 animate-ping-slow"></span>
+                            <span id="connectionText" class="text-xs font-medium text-slate-700">Connected</span>
+                        </span>
+                    </h2>
+                    <p class="text-sm text-slate-600">Session <span id="activeSession" class="font-mono">-</span> • Group <span id="activeGroup">-</span> • Elapsed <span id="timeElapsed">0:00</span></p>
                 </div>
             </div>
-        </header>
+            <div class="flex items-center gap-3 flex-wrap">
+                <div id="status" class="flex items-center gap-2 bg-sky-100 text-sky-700 px-4 py-2 rounded-full">
+                    <span class="w-2 h-2 rounded-full bg-sky-400"></span>
+                    <span id="statusText" class="text-sm font-medium">Waiting...</span>
+                </div>
+            </div>
+        </div>
 
         <!-- Main Content Area -->
-        <main class="flex-1 max-w-7xl mx-auto w-full px-4 sm:px-6 lg:px-8 py-6">
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 h-full">
+        <div class="student-panels">
                 <!-- Live Transcription Panel -->
-                <div class="bg-white rounded-xl shadow-lg border border-gray-200 flex flex-col">
+                <div class="surface surface--static flex flex-col h-full">
                     <div class="p-6 border-b border-gray-100">
                         <div class="flex items-center justify-between">
                             <div class="flex items-center space-x-3">
@@ -154,7 +161,7 @@
                 </div>
 
                 <!-- Discussion Summary Panel -->
-                <div id="summaryPanel" class="bg-white rounded-xl shadow-lg border border-gray-200 flex flex-col">
+                <div id="summaryPanel" class="surface surface--static flex flex-col h-full">
                     <div class="p-6 border-b border-gray-100">
                         <div class="flex items-center justify-between">
                             <div class="flex items-center space-x-3">
@@ -182,7 +189,7 @@
                 </div>
 
                 <!-- Discussion Checklist Panel -->
-                <div id="checklistPanel" class="bg-white rounded-xl shadow-lg border border-gray-200 flex flex-col hidden">
+                <div id="checklistPanel" class="surface surface--static flex flex-col h-full hidden">
                     <div class="p-6 border-b border-gray-100">
                         <div class="flex items-center justify-between">
                             <div class="flex items-center space-x-3">
@@ -205,8 +212,10 @@
                     </div>
                 </div>
             </div>
-        </main>
+        </div>
     </div>
+
+    </main>
 
   <script>
     const socket = io();
