--- a/public/login.html
+++ b/public/login.html
@@ -52,7 +52,7 @@
         <div class="absolute -inset-px rounded-2xl pointer-events-none shadow-[inset_0_1px_0_rgba(255,255,255,0.6)]"></div>
 
         <label for="email" class="block text-sm font-medium text-slate-800 mb-2">Email</label>
-        <input id="email" type="email" placeholder="username@ri.edu.sg" autocomplete="email"
+        <input id="email" type="email" placeholder="teacher@ri.edu.sg or teacher@schools.gov.sg" autocomplete="email"
                class="w-full rounded-lg border border-slate-300/80 bg-white/80 backdrop-blur px-4 py-3 shadow-sm focus:outline-none focus:ring-2 focus:ring-emerald-300 focus:border-emerald-300" />
 
         <button id="sendCodeBtn"
